# lean_hybrid_reasoner

./: .gitignore  README.md  RELEASE_CHECKLIST.md  UPGRADE_NOTES_v0.2.md  UPGRADE_NOTES_v0.3.md  UPGRADE_NOTES_v0.4.md  UPGRADE_NOTES_v0.5.md  UPGRADE_NOTES_v0.6.md  UPGRADE_NOTES_v0.7.md  UPGRADE_NOTES_v0.8.1.md  UPGRADE_NOTES_v0.8.md  pyproject.toml
.runs/: traces.jsonl
docs/: dspy_training.md  tactic_sanitization.md
scripts/: build_clean_zip.sh  release_check.sh  release_v06_check.sh  run_local.sh
tests/: test_backend_selection.py  test_branch_scoring.py  test_budget_limits.py  test_budget_sweep.py  test_cli_error_handling.py  test_cli_optional_backend_handling.py  test_compare_proposers.py  test_compare_traces.py  test_compiled_program_manifest.py  test_config_snapshot.py  test_dashboard.py  test_dataset_pack.py  test_dataset_pack_dspy_targets.py  test_dataset_pack_regression.py  test_doctor.py  test_doctor_cli_formatting.py  test_doctor_ecosystem.py  test_dspy_dataset_loader.py  test_dspy_fallback.py  test_dspy_metrics.py  test_dspy_normalization.py  test_dspy_output_normalization.py  test_dspy_runtime_loading.py  test_ecosystem_status.py  test_engine_regression.py  test_error_parser.py  test_experiment_grid.py  test_failure_classifier.py  test_failure_report_regression.py  test_lean_cli_parser.py  test_lean_cli_smoke_real.py  test_lean_error_parser.py  test_lean_parser_namespaces.py  test_lean_sandbox.py  test_leandojo_v2_adapter.py  test_mock_backend.py  test_prompt_truncation.py  test_replay.py  test_retrieval.py  test_search_budget_regression.py  (+15 more)
(+73 files in other folders)
