[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-hybrid-reasoner"
version = "0.7.0"
description = "Bounded Lean-style hybrid neuro-symbolic proof-search platform with trace datasets, diagnostics, replay, experiment grids, failure classification, dataset packs, config snapshots, semantic retrieval adapters, and mock/Lean CLI backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["dspy-ai>=2.5", "langgraph>=0.2"]
semantic = ["sentence-transformers>=2.7", "faiss-cpu>=1.8", "numpy>=1.26"]
leandojo = []
copilot = []
leanagent = []
ecosystem = []

[project.scripts]
hybrid-proof = "lean_hybrid_reasoner.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
